--- a/public/style.css
+++ b/public/style.css
@@ -45,10 +45,11 @@
     position: absolute;
     top: 431px;
     right: 61px;
+    letter-spacing: 10px;
 }
 
 .letras {
-    width: 664px;
+    width: 750px;
     height: 91px;
     position: absolute;
     left: 211px;
@@ -73,7 +74,13 @@
     border: 1px solid #7AA7C7;
     border-radius: 3px;
     margin-right: 12px;
+    margin-bottom: 12px;
 
+}
+
+.ldesabilitado {
+    color: #798A9F;
+    background-color: #9FAAB5;
 }
 
 .chute {
@@ -96,9 +103,14 @@
     align-items: center;
 }
 
-.chute input{
-    width: 330px;
+.chute input {
+    width: 353px;
     height: 40px;
+
+    background: #FFFFFF;
+    border: 1px solid #CCCCCC;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.25);
+    border-radius: 3px;
 }
 
 .botaoChute {
